Added basic operating function as well as parent
Parent function can call any of the operating function for simplicity

--- a/index.html
+++ b/index.html
@@ -12,12 +12,24 @@
 <main>
     <div id="calculator">
       <div id="screen">screen</div>
+      <button>0</button>
+      <button>1</button>
+      <button>2</button>
+      <button>3</button>
+      <button>4</button>
+      <button>5</button>
+      <button>6</button>
+      <button>7</button>
+      <button>8</button>
+      <button>9</button>
       <button>+</button>
       <button>-</button>
       <button>x</button>
       <button>/</button>
       <button>=</button>
+      <button>C</button>
     </div>
+    <script src="app.js"></script>
 </main>
   </body>
 </html>
