Created basic DOM interaction with calculator
Currently can only do operations up until equals sign

--- a/index.html
+++ b/index.html
@@ -7,29 +7,32 @@
   </head>
   <body>
     <header>
-    <h1>Calculator</h1>
-</header>
-<main>
-    <div id="calculator">
-      <div id="screen">screen</div>
-      <button>0</button>
-      <button>1</button>
-      <button>2</button>
-      <button>3</button>
-      <button>4</button>
-      <button>5</button>
-      <button>6</button>
-      <button>7</button>
-      <button>8</button>
-      <button>9</button>
-      <button>+</button>
-      <button>-</button>
-      <button>x</button>
-      <button>/</button>
-      <button>=</button>
-      <button>C</button>
-    </div>
-    <script src="app.js"></script>
-</main>
+      <h1>Calculator</h1>
+    </header>
+    <main>
+      <div id="calculator">
+        <div id="screen">
+          <h2 id="working">0</h2>
+          <h3 id="result"></h3>
+        </div>
+        <button id="0" class="number">0</button>
+        <button id="1"class="number">1</button>
+        <button id="2"class="number">2</button>
+        <button id="3"class="number">3</button>
+        <button id="4"class="number">4</button>
+        <button id="5"class="number">5</button>
+        <button id="6"class="number">6</button>
+        <button id="7"class="number">7</button>
+        <button id="8"class="number">8</button>
+        <button id="9"class="number">9</button>
+        <button id="add" class="operator">+</button>
+        <button id="sub" class="operator">-</button>
+        <button id="mult" class="operator">x</button>
+        <button id="div" class="operator">/</button>
+        <button id="eq">=</button>
+        <button id="C">C</button>
+      </div>
+      <script src="app.js"></script>
+    </main>
   </body>
 </html>
