--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <button id="div" class="operator">/</button>
         <button id="eq">=</button>
         <button id="C">C</button>
+        <button id="decimal">.</button>
       </div>
       <script src="app.js"></script>
     </main>
