Added backspace button

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <button id="eq">=</button>
         <button id="C">C</button>
         <button id="decimal">.</button>
+        <button id="del">del</button>
       </div>
       <script src="app.js"></script>
     </main>
