Added sign button and functionality

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <button id="C">C</button>
         <button id="decimal">.</button>
         <button id="del">del</button>
+        <button id="sign">+/-</button>
       </div>
       <script src="app.js"></script>
     </main>
