--- a/index.html
+++ b/index.html
@@ -30,25 +30,25 @@
             <button id="div" class="operator">/</button>
           </div>
           <div class="row">
-            <button id="7" class="number">7</button>
-            <button id="8" class="number">8</button>
-            <button id="9" class="number">9</button>
+            <button id="seven" class="number">7</button>
+            <button id="eight" class="number">8</button>
+            <button id="nine" class="number">9</button>
             <button id="mult" class="operator">x</button>
           </div>
           <div class="row">
-            <button id="4" class="number">4</button>
-            <button id="5" class="number">5</button>
-            <button id="6" class="number">6</button>
+            <button id="four" class="number">4</button>
+            <button id="five" class="number">5</button>
+            <button id="six" class="number">6</button>
             <button id="sub" class="operator">-</button>
           </div>
           <div class="row">
-            <button id="1" class="number">1</button>
-            <button id="2" class="number">2</button>
-            <button id="3" class="number">3</button>
+            <button id="one" class="number">1</button>
+            <button id="two" class="number">2</button>
+            <button id="three" class="number">3</button>
             <button id="add" class="operator">+</button>
           </div>
           <div class="row">
-            <button id="0" class="number">0</button>
+            <button id="zero" class="number">0</button>
             <button id="decimal">.</button>
             <button id="eq">=</button>
           </div>
